deploy/k8s/07-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cipherx-worker
  namespace: cipher-x
  labels:
    app.kubernetes.io/name: cipher-x
    app.kubernetes.io/component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cipher-x
      app.kubernetes.io/component: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cipher-x
        app.kubernetes.io/component: worker
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
      containers:
        - name: worker
          image: ghcr.io/mrigeshkoyande/cipherx-worker:v3.0.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1500m
              memory: 1024Mi
